# lexicon

./: README.md  README.rst  pyproject.toml
lexicon/: main.py
lexicon_collect/: main.py
lexicon_core/: main.py
tests/: test_lexicon.py  test_lexicon_collect.py  test_lexicon_core.py
