[tool.poetry]
name = 'lexicon'
version = '0.5.1'
description = 'Command line and lib toolset for word definitions, spell check, and spelling suggestions'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^1.0.0'
pyenchant = '^3.2.0'
willow-core = {git = 'https://github.com/roboto84/willow_core.git', tag = 'v0.1.1'}
requests = '^2.30.0'

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
